--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,10 +19,7 @@
         "@typescript-eslint"
     ],
     "rules": {
-        "linebreak-style": [
-            "error",
-            "windows"
-        ],
+        "linebreak-style": "off",
         "quotes": [
             "error",
             "single"
